New ice_dynamics with DifferentialEquations.jl
Small change in averaging values added in ice_dynamics.jl, and new version of ice_dynamics created using DifferentialEquations.jl solvers. There is still an error with the input data of the solver.

--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,7 @@ CartesianGrids = "3e975e5d-2cf8-4263-9573-8460aaf534d9"
 DataDrivenDiffEq = "2445eb08-9709-466a-b3fc-47e12bd697a2"
 Debugger = "31a5f54b-26ea-5ae9-a837-f05ce5417438"
 DiffEqFlux = "aae7a2af-3d4f-5e19-a356-7da93b79d9d0"
+DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
