Backpropagation working with Tullio and without NN
Finally I managed to make Zygote pullback by switching the problematic lines with Tullio. This still needs to be properly validated using a NN, which for now is failing due to a different error.

--- a/Project.toml
+++ b/Project.toml
@@ -24,4 +24,5 @@ PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 SymbolicUtils = "d1185830-fcd6-423d-90d6-eec64667417b"
+Tullio = "bc48ee85-29a4-5162-ae0b-a64e1601d4bc"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
