--- a/Project.toml
+++ b/Project.toml
@@ -40,3 +40,6 @@ SymbolicUtils = "d1185830-fcd6-423d-90d6-eec64667417b"
 TerminalLoggers = "5d786b92-1e48-4d6f-9151-6b4477ca9bed"
 Tullio = "bc48ee85-29a4-5162-ae0b-a64e1601d4bc"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
+
+[extras]
+CPUSummary = "2a0fbf3d-bb9c-48f3-b0a9-814d99fd7ab9"
