--- a/Project.toml
+++ b/Project.toml
@@ -3,16 +3,6 @@ uuid = "c36d5296-eba1-40be-a153-0a8fa632a659"
 authors = ["Jordi Bolibar <jordi.bolibar@gmail.com>"]
 version = "0.1.0"
 
-[compat]
-julia = "1"
-
-[extras]
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-CPUSummary = "2a0fbf3d-bb9c-48f3-b0a9-814d99fd7ab9"
-
-[targets]
-test = ["Test"]
-
 [deps]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
@@ -41,6 +31,7 @@ Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 Measures = "442fdcdd-2543-5da2-b0f3-8c86c306513e"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
+PackageCompatUI = "65465c31-362d-417a-a2f0-7fa38ae507b9"
 ParallelDataTransfer = "2dcacdae-9679-587a-88bb-8b444fb7085b"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
@@ -49,6 +40,7 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
+PyCallJLD = "de320387-30cd-5f83-91a8-a6e0ae8b8444"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 RecursiveArrayTools = "731186ca-8d62-57ce-b412-fbd966d074cd"
@@ -62,4 +54,54 @@ TerminalLoggers = "5d786b92-1e48-4d6f-9151-6b4477ca9bed"
 Tullio = "bc48ee85-29a4-5162-ae0b-a64e1601d4bc"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
+[compat]
+BenchmarkTools = "1.1"
+CPUSummary = "0.1.10"
+CairoMakie = "0.6, 0.7"
+CartesianGrids = "0.1.11"
+ChainRules = "1.27"
+ChainRulesCore = "1.12"
+ComponentArrays = "0.11.10"
+DataDrivenDiffEq = "0.7, 0.8"
+Debugger = "0.7"
+DiffEqFlux = "1.44"
+DiffEqOperators = "4.38"
+DifferentialEquations = "7"
+Flux = "0.12"
+GR = "0.63, 0.64"
+GeoArrays = "0.6, 0.7"
+HDF5 = "0.16"
+IJulia = "1.22"
+Infiltrator = "1.2"
+Interpolations = "0.13"
+JLD = "0.13"
+JLD2 = "0.4.20"
+Makie = "0.16"
+Measures = "0.3"
+ModelingToolkit = "8.5"
+OrdinaryDiffEq = "6.7"
+PackageCompatUI = "1"
+ParallelDataTransfer = "0.4, 0.5"
+Parameters = "0.12"
+PkgTemplates = "0.7.20"
+Plots = "1.26"
+Polynomials = "3"
+ProgressMeter = "1.6"
+PyCall = "1.93"
+PyCallJLD = "0.2"
+PyPlot = "2.8"
+RecursiveArrayTools = "2.23"
+Revise = "3.1.10"
+StatsBase = "0.32, 0.33"
+SymbolicUtils = "0.17, 0.18, 0.19"
+TerminalLoggers = "0.1.3"
+Tullio = "0.3"
+Zygote = "0.6.30"
+julia = "1.5"
 
+[extras]
+CPUSummary = "2a0fbf3d-bb9c-48f3-b0a9-814d99fd7ab9"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
