Package versions revised in Project.toml

--- a/Project.toml
+++ b/Project.toml
@@ -55,48 +55,48 @@ Tullio = "bc48ee85-29a4-5162-ae0b-a64e1601d4bc"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
-BenchmarkTools = "1.1"
+BenchmarkTools = "1.2"
 CPUSummary = "0.1.10"
 CairoMakie = "0.6, 0.7"
 CartesianGrids = "0.1.11"
 ChainRules = "1.27"
 ChainRulesCore = "1.12"
 ComponentArrays = "0.11.10"
-DataDrivenDiffEq = "0.7, 0.8"
-Debugger = "0.7"
-DiffEqFlux = "1.44"
-DiffEqOperators = "4.38"
-DifferentialEquations = "7"
+DataDrivenDiffEq = "0.6, 0.7, 0.8"
+Debugger = "0.6, 0.7"
+DiffEqFlux = "1.44, 1.45"
+DiffEqOperators = "4.35, 4.38"
+DifferentialEquations = "6, 7"
 Flux = "0.12"
-GR = "0.63, 0.64"
+GR = "0.62, 0.63, 0.64"
 GeoArrays = "0.6, 0.7"
-HDF5 = "0.16"
-IJulia = "1.22"
+HDF5 = "0.15, 0.16"
+IJulia = "1.2"
 Infiltrator = "1.2"
 Interpolations = "0.13"
 JLD = "0.12"
-JLD2 = "0.4.20"
+JLD2 = "0.4"
 Makie = "0.16"
 Measures = "0.3"
-ModelingToolkit = "8.5"
-OrdinaryDiffEq = "6.7"
+ModelingToolkit = "7, 8"
+OrdinaryDiffEq = "5, 6"
 PackageCompatUI = "1"
 ParallelDataTransfer = "0.4, 0.5"
 Parameters = "0.12"
-PkgTemplates = "0.7.20"
-Plots = "1.26"
-Polynomials = "3"
-ProgressMeter = "1.6"
-PyCall = "1.93"
+PkgTemplates = "0.7"
+Plots = "1.2"
+Polynomials = "2, 3"
+ProgressMeter = "1"
+PyCall = "1.9"
 PyCallJLD = "0.2"
-PyPlot = "2.8"
-RecursiveArrayTools = "2.23"
-Revise = "3.1.10"
+PyPlot = "2"
+RecursiveArrayTools = "2"
+Revise = "3.1"
 StatsBase = "0.32, 0.33"
 SymbolicUtils = "0.17, 0.18, 0.19"
-TerminalLoggers = "0.1.3"
+TerminalLoggers = "0.1"
 Tullio = "0.3"
-Zygote = "0.6.30"
+Zygote = "0.6"
 julia = "1.5"
 
 [extras]
