[WIP] Towards inversions without solver
Trying to fetch ITS_LIVE data, which is only available for very few glaciers, so it might be worth waiting for Romain's data. I'm still implementing the retrieval of Glathida ice thickness data. There is no OGGM task for that yet, so we have to implement it manually.

--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ DiffEqFlux = "aae7a2af-3d4f-5e19-a356-7da93b79d9d0"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
+HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
