Initial version of rheology inversions working
So far the problem works with ADAM, but there's an issue with BFGS. We need to develop the training further, since now it quickly reaches a local minima

--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ DataDrivenDiffEq = "2445eb08-9709-466a-b3fc-47e12bd697a2"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DiffEqCallbacks = "459566f4-90b8-5000-8ac3-15dfb0a30def"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
+Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
 GeoMakie = "db073c08-6b98-4ee5-b6a4-5efafb3259c6"
