--- a/Project.toml
+++ b/Project.toml
@@ -5,82 +5,54 @@ version = "0.1.0"
 
 [deps]
 AbbreviatedStackTraces = "ac637c84-cc71-43bf-9c33-c1b4316be3d4"
-BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
-ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
-DataDrivenDiffEq = "2445eb08-9709-466a-b3fc-47e12bd697a2"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
-DiffEqCallbacks = "459566f4-90b8-5000-8ac3-15dfb0a30def"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
 GeoMakie = "db073c08-6b98-4ee5-b6a4-5efafb3259c6"
-HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
-Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
-JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
-ODEInterfaceDiffEq = "09606e27-ecf5-54fc-bb29-004bd9f985bf"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
 OptimizationOptimisers = "42dfb2eb-d2b4-4451-abcd-913932933ac1"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
-ParallelDataTransfer = "2dcacdae-9679-587a-88bb-8b444fb7085b"
-Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 PlotThemes = "ccf2f8ad-2431-5c83-bf29-c5338b663b6a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
-PyCallJLD = "de320387-30cd-5f83-91a8-a6e0ae8b8444"
+PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
-RecursiveArrayTools = "731186ca-8d62-57ce-b412-fbd966d074cd"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 SciMLSensitivity = "1ed8b502-d754-442c-8d5d-10ac956f44a1"
-SharedArrays = "1a1011a3-84de-559e-8e89-a11a2f7dc383"
 SnoopPrecompile = "66db9d55-30c0-4569-8b51-7e840670fc0c"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
-StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
-Sundials = "c3572dad-4567-51f8-b174-8c6c989267f4"
-SymbolicUtils = "d1185830-fcd6-423d-90d6-eec64667417b"
-TerminalLoggers = "5d786b92-1e48-4d6f-9151-6b4477ca9bed"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 Tullio = "bc48ee85-29a4-5162-ae0b-a64e1601d4bc"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
-BenchmarkTools = "1.2"
 CairoMakie = "0.6, 0.7"
-ComponentArrays = "0.11.10"
-DataDrivenDiffEq = "0.6, 0.7, 0.8"
 Flux = "0.12"
 GR = "0.62, 0.63, 0.64"
 IJulia = "1.2"
 Infiltrator = "1.2"
-Interpolations = "0.13"
-JLD = "0.12"
 JLD2 = "0.4"
 Makie = "0.16"
 OrdinaryDiffEq = "5, 6"
-ParallelDataTransfer = "0.4, 0.5"
-Parameters = "0.12"
 Plots = "1.2"
 Polynomials = "2, 3"
 ProgressMeter = "1"
 PyCall = "1.9"
-PyCallJLD = "0.2"
-RecursiveArrayTools = "2"
 Revise = "3.1"
-StatsBase = "0.32, 0.33"
-SymbolicUtils = "0.17, 0.18, 0.19"
-TerminalLoggers = "0.1"
 Tullio = "0.3"
 Zygote = "0.6"
 julia = "1.5"
