--- a/Project.toml
+++ b/Project.toml
@@ -40,22 +40,36 @@ Tullio = "bc48ee85-29a4-5162-ae0b-a64e1601d4bc"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
-CairoMakie = "0.6, 0.7"
-Flux = "0.12"
-GR = "0.62, 0.63, 0.64"
+AbbreviatedStackTraces = "0.1.7"
+BenchmarkTools = "1.3.2"
+CPUSummary = "0.2"
+CairoMakie = "0.10"
+Flux = "0.13"
+GR = "0.71, 0.72"
+GeoMakie = "0.5"
 IJulia = "1.2"
 Infiltrator = "1.2"
+IterTools = "1.4"
 JLD2 = "0.4"
-Makie = "0.16"
+Makie = "0.19"
+Optim = "1.7"
+Optimization = "3.12"
+OptimizationOptimJL = "0.1.5"
+OptimizationOptimisers = "0.1.2"
 OrdinaryDiffEq = "5, 6"
+PlotThemes = "3.1"
 Plots = "1.2"
 Polynomials = "2, 3"
 ProgressMeter = "1"
 PyCall = "1.9"
+PyPlot = "2.11"
 Revise = "3.1"
+SciMLSensitivity = "7.20"
+SnoopPrecompile = "1.0.3"
+TimerOutputs = "0.5.22"
 Tullio = "0.3"
 Zygote = "0.6"
-julia = "1.5"
+julia = "1.8"
 
 [extras]
 CPUSummary = "2a0fbf3d-bb9c-48f3-b0a9-814d99fd7ab9"
