--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,13 +26,25 @@ jobs:
           - x64
     steps:
       - uses: actions/checkout@v2
+      - name: Set up Python environment
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          conda-environment: oggm_env
+          activate-environment: true
+      - name: Install Python dependencies
+        run: |
+          conda env update --file oggm_env.yml
       - uses: julia-actions/setup-julia@v1
         with:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
       - uses: julia-actions/cache@v1
       - uses: julia-actions/julia-buildpkg@v1
+        env:
+            PYTHON: "oggm_env"
       - uses: julia-actions/julia-runtest@v1
+        env:
+          PYTHON: "oggm_env"
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v2
         with:
