--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Set up Python environment
         uses: conda-incubator/setup-miniconda@v2
         with:
-          conda-environment: oggm_env
+          environment-file: ./oggm_env.yml
           activate-environment: true
       - name: Install Python dependencies
         run: |
