--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -29,11 +29,11 @@ jobs:
       - name: Set up Python environment
         uses: conda-incubator/setup-miniconda@v2
         with:
-          environment-file: ./oggm_env.yml
+          environment-file: ./oggm_env.yaml
           activate-environment: true
       - name: Install Python dependencies
         run: |
-          conda env update --file oggm_env.yml
+          conda env update --file oggm_env.yaml
       - uses: julia-actions/setup-julia@v1
         with:
           version: ${{ matrix.version }}
