--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,7 +19,6 @@ jobs:
       matrix:
         version:
           - '1.8'
-          - 'nightly'
         os:
           - ubuntu-latest
         arch:
@@ -31,9 +30,6 @@ jobs:
         with:
           environment-file: ./oggm_env.yaml
           activate-environment: true
-      - name: Install Python dependencies
-        run: |
-          conda env update --file oggm_env.yaml
       - uses: julia-actions/setup-julia@v1
         with:
           version: ${{ matrix.version }}
@@ -41,10 +37,10 @@ jobs:
       - uses: julia-actions/cache@v1
       - uses: julia-actions/julia-buildpkg@v1
         env:
-            PYTHON: "oggm_env"
+            PYTHON: which python
       - uses: julia-actions/julia-runtest@v1
         env:
-          PYTHON: "oggm_env"
+          PYTHON: which python
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v2
         with:
