--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -37,10 +37,10 @@ jobs:
       - uses: julia-actions/cache@v1
       - uses: julia-actions/julia-buildpkg@v1
         env:
-            PYTHON: which python
+            PYTHON: $(which python)
       - uses: julia-actions/julia-runtest@v1
         env:
-          PYTHON: which python
+          PYTHON: $(which python)
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v2
         with:
