--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,7 +26,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python environment
-        uses: conda-incubator/setup-miniconda@v2
+        - uses: actions/setup-python
+        - uses: conda-incubator/setup-miniconda@v2
         with:
           environment-file: ./oggm_env.yaml
           activate-environment: true
@@ -37,10 +38,10 @@ jobs:
       - uses: julia-actions/cache@v1
       - uses: julia-actions/julia-buildpkg@v1
         env:
-            PYTHON: ${{ runShellCommand('which python') }}
+            PYTHON: $(which python)
       - uses: julia-actions/julia-runtest@v1
         env:
-          PYTHON: ${{ runShellCommand('which python') }}
+          PYTHON: $(which python)
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v2
         with:
