--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,8 +26,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python environment
-        - uses: actions/setup-python
-        - uses: conda-incubator/setup-miniconda@v2
+      - uses: actions/setup-python@v4
+      - uses: conda-incubator/setup-miniconda@v2
         with:
           environment-file: ./oggm_env.yaml
           activate-environment: true
