--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,7 +26,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python environment
-      - uses: actions/setup-python@v4
+        uses: actions/setup-python@v4
       - uses: conda-incubator/setup-miniconda@v2
         with:
           environment-file: ./oggm_env.yaml
