PYTHON env fixed

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -31,6 +31,7 @@ jobs:
         with:
           environment-file: ./oggm_env.yaml
           activate-environment: true
+      - run: which python
       - uses: julia-actions/setup-julia@v1
         with:
           version: ${{ matrix.version }}
