--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -32,7 +32,7 @@ jobs:
           environment-file: ./oggm_env.yaml
           activate-environment: true
       - run: conda init bash
-      - run: source ~/.bashrc
+      - run: source /home/runner/.bashrc
       - run: conda activate oggm_env
       - run: which python
       - uses: julia-actions/setup-julia@v1
