--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -29,14 +29,7 @@ jobs:
         uses: conda-incubator/setup-miniconda@v2
         with:
           environment-file: ./oggm_env.yaml
-          activate-environment: true
-      - name: Initialize conda
-        run: |
-          conda init bash
-          source ~/.bashrc
-          conda env create -f ./oggm_env.yaml
-          conda activate oggm_env
-          which python
+          activate-environment: oggm_env
       - uses: julia-actions/setup-julia@v1
         with:
           version: ${{ matrix.version }}
