--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -42,11 +42,9 @@ jobs:
           arch: ${{ matrix.arch }}
       - uses: julia-actions/cache@v1
       - uses: julia-actions/julia-buildpkg@v1
-        env:
-            PYTHON: $(which python)
+        run: |
+          which python
       - uses: julia-actions/julia-runtest@v1
-        env:
-          PYTHON: $(which python)
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v2
         with:
@@ -61,7 +59,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: julia-actions/setup-julia@v1
         with:
-          version: '1'
+          version: '1.8'
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-docdeploy@v1
         env:
