--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -25,12 +25,12 @@ jobs:
           - x64
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python environment
+      - name: Set up 🐍 ${{ matrix.python }}
         uses: conda-incubator/setup-miniconda@v2
         with:
           environment-file: ./environment.yml
           activate-environment: oggm_env
-      - name: Initialize conda
+      - name: Initialize conda environment in PyCall.jl
         run: |
           conda init bash
           source ~/.bashrc
@@ -41,13 +41,18 @@ jobs:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
       - uses: julia-actions/cache@v1
+        env:
+            cache-name: cache-artifacts
+        with:
+          path: ~/.julia/artifacts
+          key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles('**/Project.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-test-${{ env.cache-name }}-
+            ${{ runner.os }}-test-
+            ${{ runner.os }}-
       - uses: julia-actions/julia-buildpkg@v1
-      - name: Check PyCall environment
-        run: |
-          conda init bash
-          source ~/.bashrc
-          conda activate oggm_env
-          which python
+              env:
+                PYTHON : ${{ which python }}
       - uses: julia-actions/julia-runtest@v1
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v2
