--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -36,6 +36,8 @@ jobs:
           source ~/.bashrc
           conda activate oggm_env
           which python
+      - name: Set ENV Variables for 🐍 📞
+        run: echo ENV["PYTHON"] = which python
       - uses: julia-actions/setup-julia@v1
         with:
           version: ${{ matrix.version }}
