--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -30,16 +30,16 @@ jobs:
         with:
           environment-file: ./environment.yml
           activate-environment: oggm_env
-      - name: Initialize conda environment in PyCall.jl
+      - name: Set conda environment for PyCall.jl
         run: |
           conda init bash
           source ~/.bashrc
           conda activate oggm_env
           which python
-          julia
-          global ENV["PYTHON"] = read(`which python`, String)[1:end-1]
-          import Pkg; Pkg.build("PyCall")
-          exit()
+        env: 
+          PYTHON: "$(which python)"
+      - name: Set ENV Variables for 🐍 📞
+        run: echo ENV["PYTHON"] = "$(which python)" >> $GITHUB_ENV
       - uses: julia-actions/setup-julia@v1
         with:
           version: ${{ matrix.version }}
