--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,7 +19,6 @@ jobs:
       matrix:
         version:
           - '1.8'
-          - '1.9'
         os:
           - ubuntu-latest
         arch:
@@ -36,6 +35,7 @@ jobs:
           conda init bash
           source ~/.bashrc
           conda activate oggm_env
+          conda install certifi
           which python
         env: 
           PYTHON: /usr/share/miniconda/envs/oggm_env/bin/python
@@ -46,15 +46,6 @@ jobs:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
       - uses: julia-actions/cache@v1
-        env:
-          cache-name: cache-artifacts
-        with:
-          path: ~/.julia/artifacts
-          key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles('**/Project.toml') }}
-          restore-keys: |
-            ${{ runner.os }}-test-${{ env.cache-name }}-
-            ${{ runner.os }}-test-
-            ${{ runner.os }}-
       - uses: julia-actions/julia-buildpkg@v1
         env:
           PYTHON : /usr/share/miniconda/envs/oggm_env/bin/python
