--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,28 +1,82 @@
-name: Run tests
-
+name: CI
 on:
   push:
     branches:
       - main
+    tags: ['*']
   pull_request:
-    types: [opened, synchronize, reopened]
-  schedule:
-    - cron: '0 0 * * 0'
-
+concurrency:
+  # Skip intermediate builds: always.
+  # Cancel intermediate builds: only if it is a pull request build.
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: ${{ startsWith(github.ref, 'refs/pull/') }}
 jobs:
-  test-github-cpuonly:
-    env:
+  test:
+    name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
-          os: [ubuntu-20.04]
-          julia-version: ['1.8']
-          julia-arch: [x64]
-
+        version:
+          - '1.8'
+        python: [3.9]
+        os:
+          - ubuntu-latest
+        arch:
+          - x64
     steps:
       - uses: actions/checkout@v2
-      - uses: julia-actions/setup-julia@latest
+      - name: Set up Python 🐍 ${{ matrix.python }}
+        uses: actions/setup-python@v2
         with:
-          version: ${{ matrix.julia-version }}
-      - uses: julia-actions/julia-buildpkg@latest
-      - uses: julia-actions/julia-runtest@latest
+          python-version: ${{ matrix.python }}
+      - name: Set up miniconda 🐍 
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          environment-file: ./environment.yml
+          activate-environment: oggm_env
+      - name: Activate conda environment for PyCall.jl  🐍 📞
+        run: |
+          conda init bash
+          source ~/.bashrc
+          conda activate oggm_env
+          pip install --upgrade certifi
+          which python
+        env: 
+          PYTHON: /usr/share/miniconda/envs/oggm_env/bin/python
+      - name: Set ENV Variables for PyCall.jl 🐍 📞
+        run: export PYTHON=/usr/share/miniconda/envs/oggm_env/bin/python
+      - uses: julia-actions/setup-julia@v1
+        with:
+          version: ${{ matrix.version }}
+          arch: ${{ matrix.arch }}
+      - uses: julia-actions/cache@v1
+      - uses: julia-actions/julia-buildpkg@v1
+        env:
+          PYTHON : /usr/share/miniconda/envs/oggm_env/bin/python
+      - uses: julia-actions/julia-runtest@v1
+      - uses: julia-actions/julia-processcoverage@v1
+      - uses: codecov/codecov-action@v2
+        with:
+          files: lcov.info
+  docs:
+    name: Documentation
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      statuses: write
+    steps:
+      - uses: actions/checkout@v2
+      - uses: julia-actions/setup-julia@v1
+        with:
+          version: '1.8'
+      - uses: julia-actions/julia-buildpkg@v1
+      - uses: julia-actions/julia-docdeploy@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - run: |
+          julia --project=docs -e '
+            using Documenter: DocMeta, doctest
+            using ODINN
+            DocMeta.setdocmeta!(ODINN, :DocTestSetup, :(using ODINN); recursive=true)
+            doctest(ODINN)'
