--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,10 +31,12 @@ jobs:
         with:
           python-version: ${{ matrix.python }}
       - name: Set up miniconda 🐍 
-        uses: conda-incubator/setup-miniconda@v2
+      - uses: actions/checkout@v2
+      - uses: conda-incubator/setup-miniconda@v2
         with:
           environment-file: ./environment.yml
           activate-environment: oggm_env
+          condarc-file: ./condarc.yml
       - name: Activate conda environment for PyCall.jl  🐍 📞
         run: |
           conda init bash
