Update condarc.yml - set ssl_verify as false

--- a/condarc.yml
+++ b/condarc.yml
@@ -1,5 +1,12 @@
 # Show channel URLs when displaying what is going to be downloaded
 # and in 'conda list'. The default is False.
 show_channel_urls: True
+
+# Always yes when doing an installation 
+# always_yes: True
+
+# SSL verification. It is recommendable to have this in True. 
+ssl_verify: False
+
 # For more information about this file see:
 # https://conda.io/docs/user-guide/configuration/use-condarc.html
