--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,13 +30,19 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python }}
-      - name: Set up miniconda 🐍 
-      # - uses: actions/checkout@v2
-        uses: conda-incubator/setup-miniconda@v2
-        with:
+      - name: Set up mcromamba 🐍++
+        uses: mamba-org/setup-micromamba@v1
+        with: 
           environment-file: ./environment.yml
-          activate-environment: oggm_env
+          init-shell: bash
           condarc-file: ./condarc.yml
+#       - name: Set up miniconda 🐍 
+#         uses: conda-incubator/setup-miniconda@v2
+#         with:
+#           environment-file: ./environment.yml
+#           activate-environment: oggm_env
+#           condarc-file: ./condarc.yml
+#           clean-patched-environment-file: true
       - name: Activate conda environment for PyCall.jl  🐍 📞
         run: |
           conda init bash
