Update test.yml - print environment installs

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,6 +47,8 @@ jobs:
         shell: bash
         run: |
           which python
+          pip list
+          conda env export
           conda init bash
           source ~/.bashrc
           conda activate oggm_env
