Update test.yml - add mircomamba activate

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,6 +50,9 @@ jobs:
         run: |
           which python
           pip list
+          micromamba activate oggm_env
+          which python 
+          pip list
           conda env export
           conda init bash
           source ~/.bashrc
