--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,7 @@ jobs:
         with: 
           environment-file: ./environment.yml
           init-shell: bash
-          condarc-file: ./condarc.yml
+#           condarc-file: ./condarc.yml
 #       - name: Set up miniconda 🐍 
 #         uses: conda-incubator/setup-miniconda@v2
 #         with:
@@ -50,9 +50,6 @@ jobs:
         run: |
           which python
           pip list
-          micromamba activate oggm_env
-          which python 
-          pip list
           conda env export
           conda init bash
           source ~/.bashrc
@@ -64,7 +61,7 @@ jobs:
           # print installed dependencies 
           echo conda dependencies
           conda env export 
-        shell: bash -l {0}
+        shell: bash
         env: 
           PYTHON: /usr/share/miniconda/envs/oggm_env/bin/python
       - name: Test OGGM installation 🔧🌎 
